fixing serach button visibility

--- a/app/style.css
+++ b/app/style.css
@@ -49,7 +49,7 @@ button:hover {
   color: #ffffff;
 }
 
-.searchBtn {
+#searchForm .searchBtn {
   padding: 5px 10px;
   background-color: black !important;
   color: white;
